# skillcortex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
configs/: base.yaml  prototype.yaml  skill_registry.json  skills.yaml  slm_registry.json  slms.yaml  training.yaml
data/: eval.jsonl  train.jsonl
docs/: README.md  repo-boundary-map.md  research-results.md  skill-package-contract.md  slm-package-contract.md
examples/: README.md
scripts/: __init__.py  audit_fastapi_contract_baseline.py  benchmark_dynamic_router.py  build_api_contract_fastapi_candidate_data_v2.py  build_eval.py  build_fastapi_contract_benchmark.py  build_skillcortex_router_v1_report.py  build_slmcortex_router_v1_report.py  install_from_source.py  run_dynamic_adaptive_smoke.py  run_dynamic_agent_acceptance_harness.py  run_fastapi_contract_baseline.py  run_package_product_smoke.py  run_packaged_install_smoke.py  run_python_skill_recovery.py  run_seeds.py  run_skillcortex_arbitrary_skill_smoke.py  run_skillcortex_demo.py  run_slmcortex_arbitrary_skill_smoke.py  run_slmcortex_arbitrary_slm_smoke.py  run_slmcortex_demo.py  select_failure_cluster.py  validate_skill_registry.py  validate_slm_registry.py
skills/: skill_registry.json  skills.yaml
slms/: slms.yaml
src/: catalog.py  composer_app.py  contracts.py  slmcortex.py
tests/: conftest.py  test_analysis.py  test_api_contract_fastapi_candidate_data.py  test_benchmark.py  test_catalog.py  test_cli.py  test_compose.py  test_data.py  test_evaluation.py  test_execution.py  test_experiment.py  test_inference.py  (+16 more)
(+159 files in other folders)
